<resources>
    <string name="app_name">JukeBox</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="message_save_success">Sua música foi salva com sucesso</string>
    <string name="message_save_error">Ops! Não consegui salvar a sua música. Tente novamente mais tarde</string>
    <string name="message_delete_music_success">Sua música foi deletada com sucesso!</string>
    <string name="message_delete_music_error">Erro ao deletar a música! Tente novamente mais tarde</string>
    <string name="message_update_success">Música atualizada com sucesso</string>
    <string name="error_update_music">Ops!Não conseguimos atualizar sua música. Tente novamente mais tarde</string>
    <string name="message_error_list_music">Poxa, não consegui encontrar suas músicas , tente novamente mais tarde</string>
    <string name="acessibility_cadastrar_novo">Cadastrar nova música</string>
    <string name="message_title_screen_registration">Cadastrar música</string>
    <string name="message_title_screen_registration_type">Cadastrar estilo\nmusical</string>
    <string name="title_name">Nome da música</string>
    <string name="title_author">Nome do cantor (opicional)</string>
    <string name="music_author">Autor</string>
    <string name="title_confirmation_password">Letra</string>
    <string name="text_button_add_music">Salvar</string>
    <string name="new_type_music">Adicionar novo \nestilo musical</string>
    <string name="error_message_always_type">Tipo musical já existente, por favor, escolha outro nome</string>
    <string name="error_message_characteres">Musica deve conter ao menos um caractere</string>
    <string name="error_message_type_characteres">Tipo deve conter ao menos um caractere</string>
    <string name="error_default_name_characteres">Caracteres inválidos no nome</string>
    <string name="title_not_empty">Título da música não pode ser vazio</string>
    <string name="types_music_empty">Para cadastrar a música é necessário ter pelo menos um estilo.</string>
    <string name="types_music_edit_empty">Para editar a música é necessário ter pelo menos um estilo.</string>
    <string name="title_type_music">Ex: Sertanejo</string>
    <string name="alert">Alerta</string>
    <string name="message_toolbar_delete_type_music">Tem certeza que deseja deletar o estilo musical %1$s?\nas musicas cadastradas nesse estilo não serão deletadas.</string>
    <string name="yes">Sim</string>
    <string name="text_splash_activity">Ity Teixeira Acústico</string>
    <string name="text_add_queue">Pedir</string>
    <string name="error_list_music_client">Erro ao tentar listar músicas disponíveis</string>
    <string name="message_success_add_queue_client">Oba! Sua música já está na fila</string>
    <string name="message_error_add_queue_client">Poxa, não conseguimos adicionar sua música a fila. Tente novamente mais tarde</string>
    <string name="see_queue">Acompanhar fila</string>
    <string name="register_music">Adicionar novas músicas</string>
    <string name="empty_queue_musics">Nenhuma música escolhida pelo público ainda.</string>
    <string name="success_delete_music">Musica deletada com sucesso</string>
    <string name="message_delete_music">Tem certeza que deseja deletar essa música?</string>
    <string name="message_music_add">Adicionada a fila de pedidos</string>
    <string name="text_music_visibility">Deixar música visível para o cliente ?</string>
    <string name="nothing_musics">Nenhuma música encontrada</string>
    <string name="estilos_musicais_mais_pedidos">6 Estilos musicais mais pedidos:</string>
    <string name="statistics">Estatísticas</string>
    <string name="error_message_graph">Não foi possível buscar as estatísticas nesse momento, por favor, tente novamente mais tarde.</string>
    <string name="label_top_10">Top 10 músicas pedidas</string>
    <string name="text_message_client">Seu nome (Opcional)</string>
    <string name="text_request_person">Quem pediu : %1s</string>
    <string name="text_suggestion">Escreva aqui sua sugestão de música</string>
    <string name="text_send">Enviar</string>
    <string name="message_send_success">Pronto, enviamos sua sugestão de música</string>
    <string name="message_send_error">Poxa, não conseguir enviar sua sugestão.Tente novamente mais tarde</string>
    <string name="message_error_get_suggestion">Erro ao trazer as sugestões dos clientes. Tente novamente mais tarde</string>
    <string name="text_graph">Estilos musicais</string>
    <string name="empty_type_musics_graph">Sem estilos musicais ainda.</string>
    <string name="empty_type_musics_top_musics">Nenhuma música adicionada ainda</string>
    <string name="clear_statistics">Limpar estatísticas</string>
    <string name="message_delete_all_statistics">Tem certeza que deseja limpar as estatísticas atuais?</string>
    <string name="error_delete_message_graph">Não foi possível deletar as estatísticas atuais, por favor, tente novamente mais tarde.</string>
    <string name="success_delete_message_graph">Estatísticas limpa com sucesso!</string>
    <string name="requested_music_text_client">Sugestão de nova música</string>
    <string name="recommended_text">Músicas recomendadas pelo público</string>
    <string name="tetx_ok_register">Já cadastrei</string>
    <string name="text_add">Cadastrar nova</string>
    <string name="message_error_delete_recommended">Erro ao tentar tirar das músicas recomendadas. Tente novamente</string>
    <string name="message_success_delete_recommended">Pronto, essa música foi retirada da lista de músicas recomendadas</string>
    <string name="sended">Enviado</string>
    <string name="nothing_musics_recommendded">Nenhuma música foi recomendada pelos clientes ainda.</string>
</resources>